# RenderEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
RenderEngine/: CMakeLists.txt
RenderEngine/Include/: RenderEngine.h
RenderEngine/Include/Application/: GraphicsApplication.hpp
RenderEngine/Include/Application/CustomComponents/: RotatorComponent.hpp
RenderEngine/Include/AssetLoader/: AssetLoader.hpp
RenderEngine/Include/AssetLoader/Wrapper/: AssimpWrapper.hpp  StbiWrapper.hpp
RenderEngine/Include/Components/CameraController/: CameraController.hpp
RenderEngine/Include/Components/Light/: DirectionalLight.hpp  Light.hpp  PointLight.hpp  SpotLight.hpp
RenderEngine/Include/Components/MeshRenderer/: Material.hpp  MeshRenderer.hpp
RenderEngine/Include/Core/Camera/: Camera.hpp
RenderEngine/Include/Core/Object/: Object.hpp
RenderEngine/Include/Core/RessourceManager/: CubeMap.hpp  Mesh.hpp  MeshData.hpp  RessourceManager.hpp  Texture.hpp
RenderEngine/Include/Core/Scene/: Scene.hpp  SceneCreateInfo.hpp  SceneManager.hpp  Skybox.hpp
RenderEngine/Include/Core/Vertrex/: Vertex.hpp
RenderEngine/Include/Engine/: DebugMessenger.hpp  Device.hpp  DeviceContext.hpp  GraphicsApplication.hpp  Window.hpp
RenderEngine/Include/Engine/BufferObject/: BufferObject.hpp  BufferObjectCreateInfo.hpp
RenderEngine/Include/Engine/CommandBuffer/: CommandBuffer.hpp  CommandBufferCreateInfo.hpp  SwapChainCommandBuffer.hpp
RenderEngine/Include/Engine/CommandPool/: CommandPool.hpp  CommandPoolCreateInfo.hpp
RenderEngine/Include/Engine/Debugger/: DebugMessenger.hpp
RenderEngine/Include/Engine/Device/: Device.hpp  DeviceContext.hpp  DeviceCreateInfo.hpp  QueueFamiliyIndices.hpp
RenderEngine/Include/Engine/DeviceContext/: DeviceContext.hpp  DeviceContextCreateInfo.hpp  QueueFamiliyIndices.hpp
RenderEngine/Include/Engine/FrameBuffer/: FrameBuffer.hpp  FrameBufferCreateInfo.hpp
RenderEngine/Include/Engine/GraphicsPipeline/: GraphicsPipeline.hpp  GraphicsPipelineCreateInfo.hpp
RenderEngine/Include/Engine/ImageView/: ImageView.hpp  ImageViewCreateInfo.hpp
RenderEngine/Include/Engine/RenderContext/: RenderContext.hpp  RenderContextCreateInfo.hpp
RenderEngine/Include/Engine/RenderPass/: RenderPass.hpp  RenderPassCreateInfo.hpp
RenderEngine/Include/Engine/Shader/: Shader.hpp  ShaderCreateInfo.hpp
RenderEngine/Include/Engine/SwapChain/: SwapChain.hpp  SwapChainCreateInfo.hpp  SwapChainSupportDetails.hpp
RenderEngine/Include/Engine/SyncObjects/: SyncObjects.hpp  SyncObjectsCreateInfo.hpp
RenderEngine/Include/Engine/Vertrex/: Vertex.hpp
RenderEngine/Include/Engine/VulkanContext/: VulkanContext.hpp
RenderEngine/Include/Engine/Window/: Surface.hpp  Window.hpp
RenderEngine/Include/Glfw/Window/: Window.hpp
RenderEngine/Include/ResourceManager/: ResourceManager.hpp
RenderEngine/Include/ResourceManager/Assets/: AssetManager.hpp  AssetManager.inl  IAsset.hpp
RenderEngine/Include/ResourceManager/Wrapper/: AssimpWrapper.hpp  StbiWrapper.hpp
RenderEngine/Include/SceneGraph/Components/: Component.hpp
RenderEngine/Include/SceneGraph/Object/: Object.hpp
RenderEngine/Include/SceneGraph/Scene/: Scene.hpp  SceneManager.hpp  Skybox.hpp
RenderEngine/Include/Utils/Event/: Event.hpp  Event.inl  MethodHandleData.hpp  MethodHandleData.inl
RenderEngine/Include/Utils/Input/: Input.hpp
RenderEngine/Include/Utils/Time/: Time.hpp
RenderEngine/Include/Vulkan/: VulkanBaseInclude.hpp
RenderEngine/Include/Vulkan/BufferObject/: BufferObject.hpp  BufferObjectCreateInfo.hpp  BufferObjectVkCreateInfo.hpp
RenderEngine/Include/Vulkan/CommandBuffer/: CommandBufferCreateInfo.hpp  SwapChainCommandBuffer.hpp
RenderEngine/Include/Vulkan/CommandPool/: CommandPool.hpp  CommandPoolCreateInfo.hpp  CommandPoolVkCreateInfo.hpp
RenderEngine/Include/Vulkan/Debugger/: DebugMessenger.hpp
RenderEngine/Include/Vulkan/DeviceContext/: DeviceContext.hpp  DeviceContextCreateInfo.hpp  DeviceContextVkCreateInfo.hpp  PhysicalDeviceProperties.hpp  QueueFamilyIndices.hpp
RenderEngine/Include/Vulkan/FrameBuffer/: FrameBuffer.hpp  FrameBufferCreateInfo.hpp  FrameBufferVkCreateInfo.hpp
RenderEngine/Include/Vulkan/GraphicsPipeline/: GraphicsPipeline.hpp  GraphicsPipelineCreateInfo.hpp  GraphicsPipelineVkCreateInfo.hpp
RenderEngine/Include/Vulkan/ImageView/: ImageView.hpp  ImageViewCreateInfo.hpp  ImageViewVkCreateInfo.hpp
RenderEngine/Include/Vulkan/RenderContext/: RenderContext.hpp  RenderContextCreateInfo.hpp  RenderContextVkCreateInfo.hpp
RenderEngine/Include/Vulkan/RenderPass/: RenderPass.hpp  RenderPassCreateInfo.hpp  RenderPassVkCreateInfo.hpp
RenderEngine/Include/Vulkan/Shader/: Shader.hpp  ShaderCreateInfo.hpp  ShaderVkCreateInfo.hpp
RenderEngine/Include/Vulkan/Surface/: Surface.hpp
RenderEngine/Include/Vulkan/SwapChain/: SwapChain.hpp  SwapChainCreateInfo.hpp  SwapChainSupportDetails.hpp  SwapChainVkCreateInfo.hpp
RenderEngine/Include/Window/: IWindow.hpp  WindowBase.hpp
RenderEngine/Resources/Shaders/: BlinnFragmentShader.frag  BlinnPhongFragmentShader.frag  CompileShader.bat  FilterCube.vert  FragmentShader.frag  PBRFragmentShader.frag  PhongFragmentShader.frag  PrefilterEnvmap.frag  Skybox.frag  Skybox.vert  TextureFragmentShader.frag  TextureToCubemap.frag  VertexShader.vert
RenderEngine/Source/: Main.cpp
RenderEngine/Source/Application/: GraphicsApplication.cpp
RenderEngine/Source/AssetLoader/: AssetLoader.cpp
RenderEngine/Source/Engine/: DebugMessenger.cpp  Device.cpp  DeviceContext.cpp  GraphicsApplication.cpp  Surface.cpp  Window.cpp
RenderEngine/Source/ResourceManager/: ResourceManager.cpp
Sample/: CMakeLists.txt
Sample/PBRScene/: CMakeLists.txt  main.cpp
Sample/PBRScene/Component/: CameraController.cpp  CameraController.hpp
Sample/SceneCreation/: CMakeLists.txt  main.cpp
Sample/SceneCreation/Component/: CameraController.cpp  CameraController.hpp  RotatorComponent.cpp  RotatorComponent.hpp
Sample/ScenePBR/: CMakeLists.txt  main.cpp
Sample/ScenePBR/Component/: CameraController.cpp  CameraController.hpp  RotatorComponent.hpp
(+473 files in other folders)
